trying to fix the unzoom problem on mobile when the overlay is displayed

--- a/src/components/UI/Backdrop.module.scss
+++ b/src/components/UI/Backdrop.module.scss
@@ -3,10 +3,9 @@
 .backdrop {
 	position: absolute;
 	top: 0;
+	bottom: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	right: 0;
+	overflow: hidden;
 	background-color: $BgOpacity95;
 }
